--- a/css/style.css
+++ b/css/style.css
@@ -1412,12 +1412,17 @@ p {
   display: block;
   min-width: 13rem;
   text-align: center;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 1.6rem;
   text-transform: uppercase;
   line-height: 2.2rem;
   padding: 2.7rem 1rem;
   position: relative;
+  background: #fff;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
 }
 
 @media only screen and (max-width: 767px) {
