--- a/socketify/static/styles/main.css
+++ b/socketify/static/styles/main.css
@@ -2376,7 +2376,7 @@ h1{
     margin-bottom: 2.5rem;
 }
 .custom-select{
-    background: url(/static/assets/images/caret.svg) 97% 40% no-repeat;
+    background: url(../assets/images/caret.svg) 97% 45% no-repeat;
     background-size: 16px 16px;
     color: #f8ec26;
     padding: 1rem 1.5rem;
