--- a/socketify/static/styles/main.css
+++ b/socketify/static/styles/main.css
@@ -2394,3 +2394,8 @@ p{margin-bottom: 0.5rem;}
 .text-center{
     text-align: center;
 }
+.img-fluid{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
