--- a/CBD/css/style.css
+++ b/CBD/css/style.css
@@ -7767,6 +7767,12 @@ select.form-control {
   margin-bottom: 1.3rem;
 }
 
+@media only screen and (min-width: 992px) {
+  .product__brand-floating {
+    width: 30.6rem;
+  }
+}
+
 .product__content {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -8978,7 +8984,7 @@ select.form-control {
 
 .fixed {
   position: fixed;
-  top: 6rem;
+  top: 7rem;
 }
 
 .order {
