--- a/Kogevna/css/style.css
+++ b/Kogevna/css/style.css
@@ -306,6 +306,7 @@ input:hover::-webkit-inner-spin-button {
   letter-spacing: 0.08rem;
   background: none;
   border: none;
+  color: #27221e;
 }
 
 .close-link:hover .close-link__circle {
@@ -860,77 +861,12 @@ a:hover > .icon-telegram:after {
 }
 
 .icon-present {
-  width: rem;
-  height: rem;
   background-image: url(../img/icons/present.svg);
 }
 
 .icon-present_lg {
   width: 9.4rem;
   height: 12.8rem;
-}
-
-.icon- {
-  width: rem;
-  height: rem;
-  background-image: url(../img/icons/.svg);
-}
-
-.icon- {
-  width: rem;
-  height: rem;
-  background-image: url(../img/icons/.svg);
-}
-
-.icon- {
-  width: rem;
-  height: rem;
-  background-image: url(../img/icons/.svg);
-}
-
-.icon- {
-  width: rem;
-  height: rem;
-  position: relative;
-}
-
-.icon-:hover:before {
-  opacity: 0;
-}
-
-.icon-:hover:after {
-  opacity: 1;
-}
-
-.icon-:before, .icon-:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: contain;
-  background-position: 0 0;
-  background-repeat: no-repeat;
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-
-.icon-:before {
-  background-image: url(../img/icons/.svg);
-}
-
-.icon-:after {
-  opacity: 0;
-  background-image: url(../img/icons/-light.svg);
-}
-
-a:hover > .icon-:before {
-  opacity: 0;
-}
-
-a:hover > .icon-:after {
-  opacity: 1;
 }
 
 .btn {
@@ -1085,7 +1021,7 @@ a:hover > .icon-:after {
 }
 
 .btn_size-lg {
-  padding: 1.85rem 3.85rem;
+  padding: 1.95rem 3.85rem;
   font-size: 1.8rem;
 }
 
@@ -1211,6 +1147,7 @@ a:hover > .text_dotted, a.text_dotted:hover, label:hover .text_dotted {
   border-bottom: 1px dotted #27221e;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+  line-height: 1;
 }
 
 .text_dotted.text_light:not(:hover) {
@@ -1255,7 +1192,7 @@ a:hover > .text_dotted, a.text_dotted:hover, label:hover .text_dotted {
   font-size: 1.6rem;
 }
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 767px) {
   .text_size-md {
     font-size: 0.986rem;
     line-height: 1.15rem;
@@ -2143,7 +2080,7 @@ textarea.form-control_textarea-md {
   padding-bottom: 0.7rem;
 }
 
-.header.header_fixed:after {
+.header.header_fixed:before {
   content: '';
   display: block;
   position: absolute;
@@ -2157,6 +2094,10 @@ textarea.form-control_textarea-md {
   background-size: auto 100%;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
+}
+
+.header.header_fixed:after {
+  display: none;
 }
 
 .header.header_fixed .icon {
@@ -2225,9 +2166,9 @@ textarea.form-control_textarea-md {
   .header__contacts {
     width: 100%;
     margin: 0.5rem 0 0 0;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
@@ -2321,24 +2262,14 @@ textarea.form-control_textarea-md {
 }
 
 @media only screen and (max-width: 767px) {
-  .navigation {
-    padding: 6rem 0;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
+  .nav-list {
+    position: absolute;
+    top: 100%;
     right: 0;
-    -webkit-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
     background: #fff;
-    z-index: 97;
-    overflow-y: auto;
-  }
-  .navigation.show {
-    -webkit-transform: none;
-            transform: none;
+    width: 20rem;
+    z-index: 95;
+    padding: 0.2rem 1rem;
   }
 }
 
@@ -2445,6 +2376,10 @@ textarea.form-control_textarea-md {
   font-weight: bold;
 }
 
+.menu {
+  position: relative;
+}
+
 .btn-menu {
   display: block;
   border: 1px solid transparent;
@@ -2460,13 +2395,15 @@ textarea.form-control_textarea-md {
   border-radius: 2px;
 }
 
-.btn-menu:hover .btn-menu__item {
-  background: #8b3418;
+.btn-menu:hover {
+  color: #f6efdc;
 }
 
 .preview {
   background: url(../img/bg-preview.jpg) 50% 50% no-repeat;
   background-size: cover;
+  position: relative;
+  z-index: 95;
 }
 
 @media only screen and (min-width: 768px) {
@@ -2518,9 +2455,46 @@ textarea.form-control_textarea-md {
   }
 }
 
+.preview__video {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.preview__video:after {
+  display: block;
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: #8b3418;
+  opacity: .5;
+}
+
+.preview__video video {
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  visibility: visible;
+  opacity: 1;
+  width: 100vw;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .about-section {
   border-radius: 10px;
-  padding: 2.4rem 1.6rem 2.5rem;
+  padding: 2.4rem 1.6rem;
   margin-bottom: 3rem;
 }
 
@@ -2541,6 +2515,10 @@ textarea.form-control_textarea-md {
   .about-section p {
     margin-bottom: 1.2rem;
   }
+}
+
+.about-section__title {
+  margin-bottom: 2.1rem;
 }
 
 .icon-link {
@@ -2573,7 +2551,7 @@ textarea.form-control_textarea-md {
 .icon-link__image {
   -webkit-transition: opacity 0.3s ease-out;
   transition: opacity 0.3s ease-out;
-  margin: 0.8rem 0;
+  margin: 0.7rem 0 0.9rem;
 }
 
 @media only screen and (max-width: 767px) {
@@ -2739,16 +2717,13 @@ textarea.form-control_textarea-md {
 }
 
 .tabs-nav__link {
-  padding: 0.825rem 0.7rem;
+  padding: 0.825rem 1.3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   font-weight: bold;
   background: #e4decd;
-  position: relative;
-  margin: 0 0.6rem;
-  -webkit-transition: none;
-  transition: none;
+  border-radius: 10px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -2761,29 +2736,6 @@ textarea.form-control_textarea-md {
 .tabs-nav__link:hover, .tabs-nav__link.active {
   background: #27221e;
   color: #f6efdc;
-}
-
-.tabs-nav__link:hover:before, .tabs-nav__link:hover:after, .tabs-nav__link.active:before, .tabs-nav__link.active:after {
-  background-image: url(../img/tabs-before-active.png);
-}
-
-.tabs-nav__link:before, .tabs-nav__link:after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: -0.6rem;
-  width: 0.6rem;
-  background: url(../img/tabs-before.png) 0 0 no-repeat;
-  background-size: 100% 100%;
-}
-
-.tabs-nav__link:after {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-  left: auto;
-  right: -0.6rem;
 }
 
 .proposition-section {
@@ -3003,6 +2955,12 @@ textarea.form-control_textarea-md {
   height: 5rem;
   background: url(../img/order-shadow.png) 50% 0 no-repeat;
   background-size: contain;
+}
+
+@media only screen and (max-width: 767px) {
+  .order-section__shadow {
+    bottom: -5.2rem;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
