--- a/PyLabel/css/style.css
+++ b/PyLabel/css/style.css
@@ -913,10 +913,9 @@ body {
 }
 
 .border-block {
-  border-top: 1px solid rgba(255, 255, 255, 0.38);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.38);
-  padding: 4rem 0 5rem;
+  padding: 4.2rem 0 5rem;
   margin: 3.7rem 0 7.1rem;
+  position: relative;
 }
 
 @media only screen and (max-width: 767px) {
@@ -937,6 +936,23 @@ body {
   .border-block_margin {
     margin-bottom: 5.9rem;
   }
+}
+
+.border-block:before, .border-block:after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.38) 50%, rgba(255, 255, 255, 0.15) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#26ffffff', endColorstr='#26ffffff',GradientType=1 );
+  top: 0;
+  height: 0.1rem;
+}
+
+.border-block:after {
+  top: auto;
+  bottom: 0;
 }
 
 @media only screen and (max-width: 767px) {
