--- a/TDR/css/style.css
+++ b/TDR/css/style.css
@@ -296,6 +296,12 @@ input:hover::-webkit-inner-spin-button {
   margin-top: 1rem !important;
 }
 
+@media only screen and (max-width: 991px) {
+  .dropdown-menu {
+    width: 100%;
+  }
+}
+
 .dropdown-menu.show {
   display: block;
 }
@@ -758,18 +764,17 @@ p {
   background: url(../img/bg-preview.jpg) 50% 0 no-repeat;
   background-size: cover;
   position: relative;
-  z-index: 1;
 }
 
 @media only screen and (max-width: 1399px) {
   .preview {
-    background-position: 25% 2rem;
+    background-position: 25% 0;
   }
 }
 
 @media only screen and (max-width: 991px) {
   .preview {
-    background-position: 50% 2rem;
+    background-position: 50% 0;
   }
 }
 
@@ -784,7 +789,7 @@ p {
   top: 0;
   left: 38%;
   margin: 0 -2rem 0 1.4rem;
-  z-index: -1;
+  z-index: 1;
 }
 
 @media only screen and (min-width: 3000px) {
@@ -854,8 +859,9 @@ p {
 
 .preview__title {
   margin-bottom: 1.6rem;
-  -webkit-transition: all 0.1s ease-out;
-  transition: all 0.1s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  display: inline-block;
 }
 
 .preview__title:hover {
@@ -1124,38 +1130,32 @@ p {
 }
 
 .advantages {
-  margin: -8.8rem 0 20rem;
+  margin: -37rem 0 5rem;
   position: relative;
   z-index: 6;
 }
 
 @media only screen and (max-width: 1399px) {
   .advantages {
-    margin-bottom: 10rem;
-  }
-}
-
-@media only screen and (max-width: 1199px) {
-  .advantages {
-    margin-bottom: 4rem;
+    margin: -20rem 0 0;
   }
 }
 
 @media only screen and (max-width: 991px) {
   .advantages {
-    margin-bottom: 17rem;
+    margin-top: -10rem;
   }
 }
 
 @media only screen and (max-width: 767px) {
   .advantages {
-    margin: -6rem 0 0;
+    margin-top: -6rem 0 3rem;
   }
 }
 
 .advantages__image {
   width: 50.5%;
-  top: -29rem;
+  top: 0;
   left: -8px;
   position: absolute;
   display: -webkit-box;
@@ -1164,30 +1164,6 @@ p {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-}
-
-@media only screen and (max-width: 1919px) {
-  .advantages__image {
-    top: -19rem;
-  }
-}
-
-@media only screen and (max-width: 1399px) {
-  .advantages__image {
-    top: -14rem;
-  }
-}
-
-@media only screen and (max-width: 1199px) {
-  .advantages__image {
-    top: -7rem;
-  }
-}
-
-@media only screen and (max-width: 991px) {
-  .advantages__image {
-    top: 0;
-  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -1209,17 +1185,34 @@ p {
 .advantages__text {
   width: 48.5%;
   margin-left: auto;
+  padding-top: 29rem;
+  padding-bottom: 10rem;
+}
+
+@media only screen and (max-width: 1919px) {
+  .advantages__text {
+    padding-top: 19rem;
+  }
+}
+
+@media only screen and (max-width: 1399px) {
+  .advantages__text {
+    padding-top: 14rem;
+  }
 }
 
 @media only screen and (max-width: 1199px) {
   .advantages__text {
+    padding-bottom: 0;
     width: 52.5%;
+    padding-top: 7rem;
   }
 }
 
 @media only screen and (max-width: 991px) {
   .advantages__text {
     width: 58.5%;
+    padding-top: 0;
   }
 }
 
@@ -1298,13 +1291,19 @@ p {
 
 @media only screen and (max-width: 1199px) {
   .about {
+    padding-bottom: 3rem;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .about {
     padding-bottom: 1rem;
   }
 }
 
 .about__image {
   position: absolute;
-  top: -9.4rem;
+  top: 0;
   left: 34.2%;
   z-index: -1;
 }
@@ -1315,28 +1314,9 @@ p {
   }
 }
 
-@media only screen and (max-width: 1599px) {
-  .about__image {
-    top: 0;
-  }
-}
-
-@media only screen and (max-width: 1399px) {
-  .about__image {
-    top: 10rem;
-  }
-}
-
 @media only screen and (max-width: 1199px) {
   .about__image {
-    top: 13rem;
     left: 38%;
-  }
-}
-
-@media only screen and (max-width: 991px) {
-  .about__image {
-    top: -20rem;
   }
 }
 
@@ -1384,6 +1364,7 @@ p {
 
 .about__text {
   width: 44.5%;
+  padding-top: 9rem;
 }
 
 @media only screen and (max-width: 1399px) {
@@ -1392,9 +1373,21 @@ p {
   }
 }
 
+@media only screen and (max-width: 1399px) {
+  .about__text {
+    padding-top: 25rem;
+  }
+}
+
 @media only screen and (max-width: 991px) {
   .about__text {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .about__text {
+    padding-top: 0;
   }
 }
 
