--- a/TDR/css/style.css
+++ b/TDR/css/style.css
@@ -296,7 +296,7 @@ input:hover::-webkit-inner-spin-button {
   margin-top: 1rem !important;
 }
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 767px) {
   .dropdown-menu {
     width: 100%;
   }
@@ -1138,14 +1138,14 @@ p {
 }
 
 .advantages {
-  margin: -65rem 0 0;
+  margin: -65rem 0 2rem;
   position: relative;
   z-index: 6;
 }
 
 @media only screen and (max-width: 1919px) {
   .advantages {
-    margin: -40rem 0 0;
+    margin: -40rem 0 5.2rem;
   }
 }
 
@@ -1169,7 +1169,7 @@ p {
 
 @media only screen and (max-width: 991px) {
   .advantages {
-    margin-top: -10rem;
+    margin: -10rem 0 0;
   }
 }
 
@@ -1304,7 +1304,7 @@ p {
 .about {
   position: relative;
   z-index: 4;
-  padding-bottom: 20rem;
+  padding-bottom: 14rem;
 }
 
 @media only screen and (max-width: 1599px) {
@@ -1313,34 +1313,22 @@ p {
   }
 }
 
-@media only screen and (max-width: 1599px) {
-  .about {
-    padding-bottom: 21.5rem;
-  }
-}
-
 @media only screen and (max-width: 1399px) {
   .about {
-    padding-bottom: 9rem;
-  }
-}
-
-@media only screen and (max-width: 1199px) {
-  .about {
-    padding-bottom: 3rem;
+    padding-bottom: 8.8rem;
   }
 }
 
 @media only screen and (max-width: 991px) {
   .about {
-    padding-bottom: 1rem;
+    padding-bottom: 3rem;
   }
 }
 
 .about__image {
   position: absolute;
   top: 0;
-  left: 34.2%;
+  left: 40%;
   z-index: -1;
 }
 
@@ -1359,6 +1347,13 @@ p {
 @media only screen and (max-width: 1199px) {
   .about__image {
     left: 38%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    bottom: 0;
   }
 }
 
@@ -1421,28 +1416,23 @@ p {
   }
 }
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 767px) {
   .about__text {
     width: 100%;
+    padding-top: 4.5rem;
   }
 }
 
 .about__heading {
-  margin-bottom: 7.2rem;
+  margin-bottom: 3.5rem;
 }
 
 .about__heading .title_size-lg {
   margin-bottom: 0.6rem;
 }
 
-@media only screen and (max-width: 1399px) {
-  .about__heading {
-    margin-bottom: 3.5rem;
-  }
-}
-
 .about-item {
-  margin: 0 0 7.7rem 0.7rem;
+  margin: 0 0 3.9rem 0.7rem;
   font-size: 1.6rem;
   text-transform: uppercase;
   font-weight: bold;
@@ -1460,15 +1450,9 @@ p {
   z-index: 1;
 }
 
-@media only screen and (max-width: 1599px) {
+@media only screen and (max-width: 991px) {
   .about-item {
-    margin-bottom: 3.5rem;
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  .about-item {
-    margin: 0 0 2rem 0.7rem;
+    margin: 0 0 2.5rem 0.7rem;
     padding: 1.7rem 1.5rem 1.7rem 10.5rem;
     font-size: 1.4rem;
   }
@@ -1528,7 +1512,7 @@ p {
   min-width: 12rem;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 991px) {
   .about-item__image {
     min-width: 10rem;
     width: 10rem;
@@ -1624,7 +1608,7 @@ p {
 
 @media only screen and (max-width: 767px) {
   .work {
-    padding: 2.5rem 0 0.6rem;
+    padding: 5.2rem 0 3rem;
   }
 }
 
