--- a/TDR/css/style.css
+++ b/TDR/css/style.css
@@ -730,6 +730,13 @@ p {
   display: block;
 }
 
+@media only screen and (max-width: 767px) {
+  .nav-list__link_btn {
+    padding: 1.5rem 1.9rem;
+    margin-top: 1.5rem;
+  }
+}
+
 .nav-list__link_btn:hover {
   border-color: #ff9853;
 }
