--- a/TDR/css/style.css
+++ b/TDR/css/style.css
@@ -645,10 +645,10 @@ p {
   .nav {
     position: fixed;
     top: 0;
-    bottom: 0;
+    height: 100vh;
     left: 0;
     right: 0;
-    overflow-y: auto;
+    overflow: hidden;
     z-index: 94;
     background: rgba(20, 12, 10, 0.7);
     -webkit-transform: translateX(100%);
@@ -665,6 +665,7 @@ p {
     display: -ms-flexbox;
     display: flex;
     margin: 0;
+    padding-bottom: 15rem;
     -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
   }
@@ -797,7 +798,7 @@ p {
   position: relative;
 }
 
-@media only screen and (min-width: 1900px) {
+@media only screen and (min-width: 1920px) {
   .preview {
     padding-bottom: 30rem;
   }
@@ -916,9 +917,21 @@ p {
   z-index: 3;
 }
 
+@media only screen and (max-width: 1919px) {
+  .preview__text {
+    padding: 13rem 0 59rem;
+  }
+}
+
+@media only screen and (max-width: 1599px) {
+  .preview__text {
+    padding: 7rem 0 59rem;
+  }
+}
+
 @media only screen and (max-width: 1399px) {
   .preview__text {
-    padding: 16rem 0 36rem;
+    padding: 7rem 0 40rem;
   }
 }
 
@@ -1158,6 +1171,16 @@ p {
   -webkit-transform: translate(0, 0) rotate(0);
           transform: translate(0, 0) rotate(0);
   opacity: 1;
+}
+
+@media only screen and (max-width: 767px) {
+  .anim-items {
+    opacity: 1;
+    -webkit-transform: none;
+            transform: none;
+    -webkit-transition: none;
+    transition: none;
+  }
 }
 
 .advantages {
@@ -1642,7 +1665,7 @@ p {
   margin-top: 7.5rem;
 }
 
-@media only screen and (min-width: 1900px) {
+@media only screen and (min-width: 1920px) {
   .work__row {
     margin-left: -15.3%;
     margin-right: -15.3%;
