--- a/CBD/css/style.css
+++ b/CBD/css/style.css
@@ -4193,27 +4193,14 @@ select.form-control {
   }
 }
 
-.preview-slider .slick-slide {
-  padding: 25.9rem 0 10.3rem;
-  background: #ECF3EA;
-  position: relative;
+.preview-slider {
+  padding-top: 18rem;
 }
 
 @media only screen and (max-width: 991px) {
-  .preview-slider .slick-slide {
-    padding: 8.8rem 5.1rem 11.3rem;
+  .preview-slider {
+    padding-top: 9rem;
   }
-}
-
-@media only screen and (max-width: 767px) {
-  .preview-slider .slick-slide {
-    text-align: center;
-    padding: 0 0 7.1rem;
-  }
-}
-
-.preview-slider .slick-slide.slide-dark {
-  background: #097147;
 }
 
 @media only screen and (max-width: 767px) {
@@ -4223,20 +4210,8 @@ select.form-control {
 }
 
 .preview-slider__image {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-@media only screen and (max-width: 767px) {
-  .preview-slider__image {
-    position: static;
-    height: auto;
-  }
+  height: auto;
 }
 
 .preview-slider .slick-dots {
@@ -4254,6 +4229,13 @@ select.form-control {
 
 .preview-slider .slick-dots:not([class*="slick-dots_inversion"]) button {
   background: #000 !important;
+}
+
+@media only screen and (max-width: 1599px) {
+  .preview-slider .slick-dots {
+    max-width: 1110px;
+    bottom: 3rem;
+  }
 }
 
 @media only screen and (max-width: 1399px) {
